manifest/app/users-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - image: 561341012850.dkr.ecr.us-east-1.amazonaws.com/team62-users-api
        name: users-api
        ports:
        - containerPort: 8083
          name: usersport
      restartPolicy: Always
