manifest/app/users-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: users-api
  namespace: todoapp
spec:
  selector:
    app: users-api
  ports:
  - port: 8083
  type: ClusterIP
